feat: 前端项目整合、ListInterfaces/ListProtocols、cmd重构成变量定义、handler->handle重命名
